--- a/src/registrar/templates/domain_keydata.html
+++ b/src/registrar/templates/domain_keydata.html
@@ -38,7 +38,7 @@
     {% for form in formset %}
     <fieldset class="ds-record">
 
-      <legend class="sr-only">Key Data record {{forloop.counter}}</legend>
+      <legend class="sr-only">DS Data record {{forloop.counter}}</legend>
 
       <h2 class="margin-top-0">DS Data record {{forloop.counter}}</h2>
 
@@ -70,9 +70,6 @@
 
       <div class="grid-row margin-top-2">
         <div class="grid-col">
-          {% comment %} {% with add_group_class="float-right-tablet" %}
-            {% input_with_errors form.delete %}
-          {% endwith %} {% endcomment %}
           <button type="button" class="usa-button usa-button--unstyled display-block float-right-tablet delete-record">
             <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
               <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
