--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -4,6 +4,9 @@
 {% block title %}DS Data | {{ domain.name }} | {% endblock %}
 
 {% block domain_content %}
+  {% for form in formset %}
+    {% include "includes/form_errors.html" with form=form %}
+  {% endfor %}
 
   <h1>DS Data</h1>
 
@@ -70,9 +73,6 @@
 
       <div class="grid-row margin-top-1">
         <div class="grid-col">
-          {% comment %} {% with add_group_class="float-right-tablet" %}
-            {% input_with_errors form.delete %}
-          {% endwith %} {% endcomment %}
           <button type="button" class="usa-button usa-button--unstyled display-block float-right-tablet delete-record">
             <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
               <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
@@ -80,9 +80,6 @@
           </button>
         </div>
       </div>
-
-      <!-- Hidden field to store initial values -->
-      {% comment %} <input type="hidden" class="initial-values" value="{{ form.initial|escapejs }}"> {% endcomment %}
 
     </fieldset>
     {% endfor %}
