removed js for hide and show on dnssec main page; handling flags in app with session variables rather than model attributes

--- a/src/registrar/templates/domain_dnssec.html
+++ b/src/registrar/templates/domain_dnssec.html
@@ -5,9 +5,9 @@
 
 {% block domain_content %}
 
-  <h1>DNSSEC</h1>
+  <h1>{% if dnssec_enabled %}Set up {% endif %}DNSSEC</h1>
 
-  <p>DNSSEC, or DNS Security Extensions, is additional security layer to protect your website. Enabling DNSSEC ensures that when someone visits your website, they can be certain that it's connecting to the correct server, preventing potential hijacking or tampering with your domain's records. <a href="https://www.icann.org/resources/pages/dnssec-what-is-it-why-important-2019-03-05-en">Read more about DNSSEC and why it is important.</a></p>
+  <p>DNSSEC, or DNS Security Extensions, is additional security layer to protect your website. Enabling DNSSEC ensures that when someone visits your website, they can be certain that it's connecting to the correct server, preventing potential hijacking or tampering with your domain's records.</p>
 
   <form class="usa-form usa-form--large" method="post">
     {% csrf_token %}
@@ -24,6 +24,21 @@
       data-open-modal
       >Disable DNSSEC</a
     >
+    {% elif dnssec_enabled %}
+    <div id="add-records">
+      <h2> Add DS Records </h2>
+      <p>In order to enable DNSSEC and add Delegation Signer (DS) records, you must first configure it with your DNS hosting service. Your configuration will determine whether you need to add DS Data or Key Data. Contact your DNS hosting provider if you are unsure which record type to add.</p>
+      <p>
+        <a href="{% url 'domain-dns-dnssec-dsdata' pk=domain.id %}" class="usa-button usa-button--outline">Add DS Data</a>
+        <a href="{% url 'domain-dns-dnssec-keydata' pk=domain.id %}" class="usa-button usa-button--outline">Add Key Data</a>
+        <button
+          type="submit"
+          class="usa-button usa-button--unstyled"
+          name="cancel_dnssec"
+          id="cancel_dnssec"
+      >Cancel</button>
+      </p>
+    </div>
     {% else %}
     <div id="enable-dnssec">
       <div class="usa-alert usa-alert--info usa-alert--slim margin-bottom-3">
@@ -32,27 +47,11 @@
         </div>
       </div>
       <button
-          type="button"
+          type="submit"
           class="usa-button"
           name="enable_dnssec"
           id="enable_dnssec"
       >Enable DNSSEC</button>
-    </div>
-
-    {% comment %} display: none is sufficient on hidden elements for accessibility (removes accessibility tree) {% endcomment %}
-    <div id="add-records" class="display-none">
-      <h2> Add DS Records </h2>
-      <p>In order to enable DNSSEC and add Delegation Signer (DS) records, you must first configure it with your DNS hosting service. Your configuration will determine whether you need to add DS Data or Key Data. Contact your DNS hosting provider if you are unsure which record type to add.</p>
-      <p>
-        <a href="{% url 'domain-dns-dnssec-dsdata' pk=domain.id %}" class="usa-button usa-button--outline">Add DS Data</a>
-        <a href="{% url 'domain-dns-dnssec-keydata' pk=domain.id %}" class="usa-button usa-button--outline">Add Key Data</a>
-        <button
-          type="button"
-          class="usa-button usa-button--unstyled"
-          name="cancel_dnssec"
-          id="cancel_dnssec"
-      >Cancel</button>
-      </p>
     </div>
     {% endif %}
   </form>
