--- a/src/registrar/templates/domain_dnssec.html
+++ b/src/registrar/templates/domain_dnssec.html
@@ -18,9 +18,9 @@
       </div>
     </div>
     <a
-      href="#example-modal-1"
+      href="#toggle-dnssec-alert"
       class="usa-button"
-      aria-controls="example-modal-1"
+      aria-controls="toggle-dnssec-alert"
       data-open-modal
       >Disable DNSSEC</a
     >
