some content updates

--- a/src/registrar/templates/domain_dnssec.html
+++ b/src/registrar/templates/domain_dnssec.html
@@ -5,7 +5,7 @@
 
 {% block domain_content %}
 
-  <h1>{% if dnssec_enabled %}Set up {% endif %}DNSSEC</h1>
+  <h1>DNSSEC</h1>
 
   <p>DNSSEC, or DNS Security Extensions, is additional security layer to protect your domain. Enabling DNSSEC ensures that when someone visits your domain, they can be certain that it's connecting to the correct server, preventing potential hijacking or tampering with your domain's records.</p>
 
