--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -23,7 +23,7 @@
             <a href="{{ url }}"
               {% if request.path == url %}class="usa-current"{% endif %}
             >
-                DNS name servers
+                Name servers
             </a>
           </li>
 
