--- a/src/registrar/templates/domain_dnssec.html
+++ b/src/registrar/templates/domain_dnssec.html
@@ -33,7 +33,7 @@
         <a href="{% url 'domain-dns-dnssec-keydata' pk=domain.id %}" class="usa-button usa-button--outline">Add Key Data</a>
         <button
           type="submit"
-          class="usa-button usa-button--unstyled margin-left-2"
+          class="usa-button usa-button--unstyled usa-button--cancel"
           name="cancel_dnssec"
           id="cancel_dnssec"
       >Cancel</button>
