add more specificity to CSS selectors causing a btn color bug

--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -22,15 +22,15 @@ a.breadcrumb__back {
   }
 }
 
-a.usa-button {
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
   text-decoration: none;
   color: color('white');
 }
 
-a.usa-button:visited,
-a.usa-button:hover,
-a.usa-button:focus,
-a.usa-button:active {
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline):visited,
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline):hover,
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline):focus,
+a.usa-button:not(.usa-button--unstyled, .usa-button--outline):active {
   color: color('white');
 }
   
