--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -100,7 +100,7 @@
         <a href="{{ url }}"
           {% if request.path|startswith:url %}class="usa-current"{% endif %}
         >
-            User management
+            Domain managers
         </a>
       </li>
     </ul>
