fixed formatting of error message in form

--- a/src/registrar/templates/domain_nameservers.html
+++ b/src/registrar/templates/domain_nameservers.html
@@ -44,7 +44,7 @@
           {% endwith %}
         </div>
         <div class="tablet:grid-col-6">
-          {% with sublabel_text="Ex: 86.124.49.54 or 2001:db8::1234:5678" %}
+          {% with sublabel_text="Ex: 86.124.49.54 or 2001:db8::1234:5678" add_group_class="usa-form-group--unstyled-error" %}
             {% input_with_errors form.ip %}
           {% endwith %}
         </div>
