load public_site_url helper

--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -1,5 +1,5 @@
 {% extends "domain_base.html" %}
-{% load static %}
+{% load static url_helpers %}
 
 {% block title %}Domain managers | {{ domain.name }} | {% endblock %}
 
