--- a/src/registrar/assets/sass/_theme/_forms.scss
+++ b/src/registrar/assets/sass/_theme/_forms.scss
@@ -4,6 +4,10 @@
   margin-top: units(3);
 }
 
+.usa-form .usa-button.margin-top-1 {
+  margin-top: units(1);
+}
+
 .usa-form--extra-large {
   max-width: none;
 }
