--- a/src/registrar/templates/domain_dsdata.html
+++ b/src/registrar/templates/domain_dsdata.html
@@ -21,79 +21,117 @@
   <p>In order to enable DNSSEC, you must first configure it with your DNS hosting service.</p>
 
   <p>Enter the values given by your DNS provider for DS Data.</p>
-  {% include "includes/required_fields.html" %}
 
-  <form class="usa-form usa-form--extra-large" method="post" novalidate id="form-container">
-    {% csrf_token %}
-    {{ formset.management_form }}
+  {% if not dnssec_ds_confirmed %}
+    <p>Required fields are marked with an asterisk (<abbr
+      title="required"
+      class="usa-hint usa-hint--required"
+      >*</abbr>).</p>
+    <form class="usa-form usa-form--large" method="post" novalidate id="form-container">
+      {% csrf_token %}
+      <button type="submit" class="usa-button usa-button--unstyled display-block" name="confirm-ds">
+        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+          <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+        </svg><span class="margin-left-05">Add new record</span>
+      </button>
+    </form>
+  {% else %}
+    {% include "includes/required_fields.html" %}
 
-    {% for form in formset %}
-    <fieldset class="ds-record">
+    <form class="usa-form usa-form--extra-large" method="post" novalidate id="form-container">
+      {% csrf_token %}
+      {{ formset.management_form }}
 
-      <legend class="sr-only">DS Data record {{forloop.counter}}</legend>
+      {% for form in formset %}
+      <fieldset class="ds-record">
 
-      <h2 class="margin-top-0">DS Data record {{forloop.counter}}</h2>
+        <legend class="sr-only">DS Data record {{forloop.counter}}</legend>
 
-      <div class="grid-row grid-gap-2 flex-end">
-        <div class="tablet:grid-col-4">
-          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
-            {% input_with_errors form.key_tag %}
-          {% endwith %}
+        <h2 class="margin-top-0">DS Data record {{forloop.counter}}</h2>
+
+        <div class="grid-row grid-gap-2 flex-end">
+          <div class="tablet:grid-col-4">
+            {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
+              {% input_with_errors form.key_tag %}
+            {% endwith %}
+          </div>
+          <div class="tablet:grid-col-4">
+            {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
+              {% input_with_errors form.algorithm %}
+            {% endwith %}
+          </div>
+          <div class="tablet:grid-col-4">
+            {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
+              {% input_with_errors form.digest_type %}
+            {% endwith %}
+          </div>
         </div>
-        <div class="tablet:grid-col-4">
-          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
-            {% input_with_errors form.algorithm %}
-          {% endwith %}
+
+        <div class="grid-row">
+          <div class="grid-col">
+            {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
+              {% input_with_errors form.digest %}
+            {% endwith %}
+          </div>
         </div>
-        <div class="tablet:grid-col-4">
-          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
-            {% input_with_errors form.digest_type %}
-          {% endwith %}
+
+        <div class="grid-row margin-top-1">
+          <div class="grid-col">
+            <button type="button" class="usa-button usa-button--unstyled display-block float-right-tablet delete-record">
+              <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+                <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
+              </svg><span class="margin-left-05">Delete</span>
+            </button>
+          </div>
         </div>
-      </div>
 
-      <div class="grid-row">
-        <div class="grid-col">
-          {% with attr_required=True add_group_class="usa-form-group--unstyled-error" %}
-            {% input_with_errors form.digest %}
-          {% endwith %}
-        </div>
-      </div>
+      </fieldset>
+      {% endfor %}
 
-      <div class="grid-row margin-top-1">
-        <div class="grid-col">
-          <button type="button" class="usa-button usa-button--unstyled display-block float-right-tablet delete-record">
-            <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
-              <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
-            </svg><span class="margin-left-05">Delete</span>
-          </button>
-        </div>
-      </div>
+      <button type="button" class="usa-button usa-button--unstyled display-block margin-bottom-2" id="add-ds-form">
+        <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+          <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+        </svg><span class="margin-left-05">Add new record</span>
+      </button>
 
-    </fieldset>
-    {% endfor %}
+      <button
+            id="save-ds-data"
+            type="submit"
+            class="usa-button"
+        >Save
+      </button>
+    </form>
 
-    <button type="button" class="usa-button usa-button--unstyled display-block margin-bottom-2" id="add-ds-form">
-      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
-        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
-      </svg><span class="margin-left-05">Add new record</span>
-    </button>
+    <form aria-label="form to undo changes to the DS records">
+      <button
+            type="submit"
+            class="usa-button usa-button--outline btn-cancel"
+            name="btn-cancel-click"
+            aria-label="Reset the data in the DS records to the registry state (undo changes)"
+        >Cancel
+      </button>
+    </form>
+  {% endif %}
 
-    <button
-          type="submit"
-          class="usa-button"
-      >Save
-    </button>
-  </form>
-
-  <form aria-label="form to undo changes to the DS records">
-    <button
-          type="submit"
-          class="usa-button usa-button--outline btn-cancel"
-          name="btn-cancel-click"
-          aria-label="Reset the data in the DS records to the registry state (undo changes)"
-      >Cancel
-    </button>
-  </form>
+  {% if trigger_modal %}
+  <a
+      id="ds-toggle-dnssec-alert"
+      href="#toggle-dnssec-alert"
+      class="usa-button usa-button--outline margin-top-1 display-none"
+      aria-controls="toggle-dnssec-alert"
+      data-open-modal
+      >Trigger Disable DNSSEC Modal</a
+    >
+  {% endif %}
+  {# Use data-force-action to take esc out of the equation and pass cancel_button_resets_ds_form to effectuate a reset in the view #}
+  <div
+    class="usa-modal"
+    id="toggle-dnssec-alert"
+    aria-labelledby="Are you sure you want to continue?"
+    aria-describedby="Your DNSSEC records will be deleted from the registry."
+    data-force-action
+  >
+      {% include 'includes/modal.html' with cancel_button_resets_ds_form=True modal_heading="Are you sure you want to continue?" modal_description="some good text" modal_button=modal_button|safe %}
+  </div>
 
 {% endblock %}  {# domain_content #}
